WIP Converting to react app

--- a/index.html
+++ b/index.html
@@ -13,34 +13,9 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   </head>
   <body class="bg-light">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-0">
-      <a class="navbar-brand" href="#">
-        <img src="app/images/pulpopaul.png" class="rounded" height="40px;"/>
-        Prodellia
-      </a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Dashboard</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Apuestas</a>
-          </li>
-        </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown-user" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-user-circle"></i>
-            Ricardito
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-user">
-            <a class="dropdown-item" href="#">Perfil</a>
-            <a class="dropdown-item" href="#">Apuestas</a>
-            <a class="dropdown-item" href="#">Cerrar sesión</a>
-          </div>
-        </li>
-      </ul>
-    </nav>
+
+    <div id="app"></div>
+
     <main role="main">
       <div class="container">
         <div class="py-3 text-center">
@@ -251,7 +226,8 @@
         </table>
       </div>
     </main>
-
+    
+    <script src="/public/bundle.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
