Refactoring navbar to littles components

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <button type="submit" class="btn btn-primary my-1">Aplicar</button>
 
             <div class="input-group ml-auto">
-              <input type="text" class="form-control" placeholder="Buscar..." required>
+              <input type="text" class="form-control" placeholder="Buscar...">
             </div>
           </form>
         </div>
